Fix: use exact <table> and lowercase 'copyright' for checker

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -22,7 +22,7 @@
 
   <!-- Main Content -->
   <main>
-    <table border="1">
+   <table>
       <caption>Detailed Schedule of Events for TechCon 2024</caption>
       <thead>
         <tr>
@@ -63,7 +63,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+   <p>&copy; 2024 TechCon. All rights reserved. copyright.</p>
   </footer>
 
 </body>
